# development_boards

./: .gitignore  README.md
Archive/Camera_board_v1/: camera_v1.kicad_pcb  camera_v1.kicad_pro  camera_v1.kicad_sch
Camera_board_v1/: camera_v1.kicad_pcb  camera_v1.kicad_prl  camera_v1.kicad_pro  camera_v1.kicad_sch
Camera_board_v1/jlcpcb/: project.db
Camera_board_v2/: camera_v2.kicad_pcb  camera_v2.kicad_prl  camera_v2.kicad_pro  camera_v2.kicad_sch  fp-info-cache
Camera_board_v2/jlcpcb/: project.db
FC_Advanced_Carrier/FC_Advanced_Carrier_V1/: FC_Advanced_Carrier_V1.kicad_prl  FC_Advanced_Carrier_V1.kicad_pro  FC_Advanced_Carrier_V1.kicad_sch
HatBoard/: #auto_saved_files#  FaceBoard.kicad_sch  fp-lib-table  hat_board.kicad_pcb  hat_board.kicad_pro  hat_board.kicad_sch  sym-lib-table  ~hat_board.kicad_pcb.lck  ~hat_board.kicad_sch.lck
Mux_Driver_board_v1/: mux_driver_v1.kicad_pcb  mux_driver_v1.kicad_prl  mux_driver_v1.kicad_pro  mux_driver_v1.kicad_sch  mux_driver_v1.kicad_sch-bak
Mux_Driver_board_v1/jlcpcb/: project.db
Z_Face/: #auto_saved_files#  _autosave-solar-panel-side-Z.kicad_sch  fp-info-cache  solar-panel-side-Z.kicad_pcb  solar-panel-side-Z.kicad_prl  solar-panel-side-Z.kicad_pro  solar-panel-side-Z.kicad_sch
antenna_top_cap_board 2/antenna_top_cap_V1/: antenna_top_cap.kicad_prl  (+1 more)
camera_v2a/: camera_v2a.kicad_pcb  camera_v2a.kicad_pro  camera_v2a.kicad_sch
dev_software/Batt_Pico_sdk/Battery_Software/: CMakeLists.txt
dev_software/Batt_Pico_sdk/Battery_Software/boot/: CMakeLists.txt  boot.cpp  memmap_custom.ld
dev_software/Batt_Pico_sdk/Battery_Software/lib/: CMakeLists.txt
dev_software/Batt_Pico_sdk/Battery_Software/lib/device_drivers/: MCP25625.h  MCP25625_DRIVER.cpp  MCP25625_DRIVER.h
dev_software/Batt_Pico_sdk/Battery_Software/lib/functions/: functions.cpp  functions.h
dev_software/Batt_Pico_sdk/Battery_Software/lib/main/: main.cpp  main.h
dev_software/Batt_Pico_sdk/Battery_Software/lib/pysquared/: pysquared.cpp  pysquared.h
dev_software/Batt_Pico_sdk/Battery_Software/lib/tools/: tools.cpp  tools.h
flat_sat_dev_board/: #auto_saved_files#  camera_v2.cmp  flat_sat_dev_board.kicad_pcb  flat_sat_dev_board.kicad_prl  flat_sat_dev_board.kicad_pro  flat_sat_dev_board.kicad_sch  fp-info-cache  sym-lib-table  ~flat_sat_dev_board.kicad_pcb.lck
flight_computer_advanced/: flight_computer_advanced.kicad_pcb  flight_computer_advanced.kicad_pro  flight_computer_advanced.kicad_sch  fp-lib-table
sensor_simulator/: sensor_simulator.kicad_pro
sx1276-dev/: #auto_saved_files#  fp-info-cache - Copy  fp-lib-table  radio_module - Copy.kicad_sch  radio_module.kicad_pcb  radio_module.kicad_pro  radio_module.kicad_sch  sym-lib-table  ~radio_module.kicad_pcb.lck
(+402 files in other folders)
